feat: dashboard swagger 추가
dashboard api swagger 추가
- dashboard쪽 query구문에 이전컬럼명인 created로 된 부분 created_at으로 수정
